cite deal.II and ASPECT

--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -29,7 +29,13 @@
   year={2012},
   publisher={Oxford University Press}
 }
-
+@MANUAL{aspectweb,
+    title =   {ASPECT: Advanced Solver for Problems in Earth's ConvecTion},
+    author =  {W. Bangerth and T. Heister and others},
+    year =    {2015},
+    note =    {\texttt{https://aspect.dealii.org/}},
+    url =     {https://aspect.dealii.org/}
+}
 @article{dealII82,
   title = {The \texttt{deal.II} Library, Version 8.2},
   author = {W. Bangerth and T. Heister and L. Heltai
@@ -40,7 +46,16 @@
   volume = 3,
   year = {2015},
 }
-
+@Article{BBHK10,
+  author  = {Bangerth, W. and Burstedde, C. and Heister, T. and Kronbichler,
+                  M.},
+  title   = {Algorithms and Data Structures for Massively Parallel Generic
+                  Adaptive Finite Element Codes},
+  journal = {ACM Trans. Math. Softw.},
+  volume =       "38",
+  number =       "2",
+  year    = {2011}
+}
 @article{schmeling2008benchmark,
   title={A benchmark comparison of spontaneous subduction models—towards a free surface},
   author={Schmeling, H and Babeyko, AY and Enns, A and Faccenna, C and Funiciello, F and Gerya, T and Golabek, GJ and Grigull, S and Kaus, BJP and Morra, G and others},
