Add Cedric to acknowledgements

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -972,7 +972,7 @@ gravity models. Furthermore, it runs in parallel and with adaptive mesh refineme
 This work was supported through National Science Foundation grant EAR-1246670
 and by the Computational Infrastructure in Geodynamics (CIG), through National Science Foundation grant EAR-0949446. 
 TH is partially supported by NSF grant DMS-1522191.
-Thanks to Wolfgang Bangerth and Brent Delbridge for useful discussions.
+Thanks to Wolfgang Bangerth, Brent Delbridge, and Cedric Thieulot for useful discussions.
 %% The Appendices part is started with the command \appendix;
 %% appendix sections are then done as normal sections
 %% \appendix
