Use line numbering

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -42,6 +42,9 @@
 \usepackage{color, soul}
 \usepackage{url}
 
+\usepackage{lineno}
+    \linenumbers
+
 \newif\ifdetail
 \detailfalse
 %\detailtrue
